Añadi un texto largo en ingles
Asi tiene mas grosor

--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 	<title>Fork</title>
 </head>
 <body>
-<h1>PAgina a modificar para el fork</h1>
+<h1>Pagina a modificar para el fork</h1>
+
+<p>"One does not necessarily have to cluck in disapproval to admit that entertainment is all the things its detractors say it is: fun, effortless, sensational, mindless, formulaic, predictable and subversive. In fact, one might argue that those are the very reasons so many people love it."
+— Neal Gabler, Life the Movie: How Entertainment Conquered Reality
+Tropes are just tools. Writers understand tropes and use them to control audience expectations either by using them straight or by subverting them, to convey things to the audience quickly without saying them.
+Human beings are natural pattern seekers and story tellers. We use stories to convey truths, examine ideas, speculate on the future and discuss consequences. To do this, we must have a basis for our discussion, a new language to show us what we are looking at today. So our storytellers use tropes to let us know what things about reality we should put aside and what parts of fiction we should take up.
+When editing the wiki, then, remember these two mantras:
+Tropes Are Not Bad
+There is one thing that you must keep in mind to retain your sanity here, and that is that including a trope in a particular work does not make it "ruined." Not even those tropes.
+If your favorite shows have long lists of tropes associated with them, well, so does everybody's. A show featuring an Action Girl or showing a character kicking the dog is not a bad thing; the former is merely a reasonable type of character (badass character who is female) and the latter is a character action that happens plenty in Real Life.
+Consider the following points before you label simply including a common story element or character type as a sign of creative failure:
+"But it's what this author is doing this time that matters, as much as, if not more than, what he or she did last time, and that, certainly, matters far more than its kinships, its family likenesses with its mode, its genres, its formal kind."
+—Valentine Cunningham, Oxford
+There is nothing new under the sun. Including that very statement. And the book from which it comes. Completely ignoring the possibility that one's favorite show just might not be hewn from the very essence of the universe by Thor himself and placed in the periodic table under Or for "Originalium" doesn't change the fact that it wasn't. And acknowledging that it isn't should not lessen its appeal, either.
+Every story is influenced by what came before it — and storytellers (e.g., writers, directors, actors) are bound to show that influence, intentionally or not, in the process of telling. Just because something's been used before doesn't mean it's a cliché, and stories often gain something by having ties to other works. That said, there certainly is such thing as too derivative, but there's a difference between playing a trope straight and utter Cliché Storm (and even those aren't necessarily bad).
+It's impossible to write something completely and utterly without tropes, anyway, so stop trying.
+Almost every trope has a silver lining. The much-reviled All Just a Dream was, let's not forget, used in one of the most highly regarded series finales in the history of television, as well as one of the best twist endings in any movie. While Darker and Edgier revisionism isn't always a good thing, it's been used in the biggest blockbuster of 2008. Even if a trope didn't have a silver lining, every trope could still be used honorably by way of subversion, parody, or appropriately employed and treated in-universe examples. Remember, while this site is fairly snarky, most of the snark is directed towards shows that don't use tropes well.
+Fiction isn't necessarily supposed to be realistic. When your reader wants to escape from the tired drudgery of reality, you shouldn't be trying to indexically recreate it. Much fiction seeks to show not what is, but what could be, or what should be. A trope being unrealistic isn't necessarily a flaw, and is often covered by Rule of Cool, Rule of Funny, or Rule of Scary. Indeed, a trope, however unrealistic, can be a convenient shorthand when played straight; setting up aversions or subversions for it can be more wordy than is needed to get on with story.
+Tropes that are bad when imitated in real life are not automatically bad in fiction. This is an important distinction. Many tropes contain or imply cultural, social, or moral value judgments that simply don't work the same way in fiction as they do in real life. Uncle Tomfoolery may be racist in real life, and based on some very nasty stereotypes, but when seen in a work, it simply is. It's not necessary to tell everyone how awful it is, either in the examples or in the trope description. An extreme version of this comes when somebody wants us to cut a trope because they think it describes something bad. See also Prescriptive vs. Descriptive Language.
+Tropes Are Not Good
+Tropes Are Not Bad covers the bad half of this, but there are good reasons to remember Tropes Are Not Good, too:
+All tropes can be written badly. This includes tropes that everyone thinks are good, like Magnificent Bastard. A badly written Magnificent Bastard may be done in such a way that everyone else in the story are idiots and generally gives less of an impression of intelligence and more of an impression of cheating or changing the internal rules of the story. Refuge in Audacity has different breaking points for different people.
+All tropes can be overused. Too many Xanatos Gambits tend to make the show confusing, no matter how well written they are. Too many Moments Of Awesome take up room where plot could go, or make the audience pay less attention to the relatively boring plot bits, making the story more shallow. The Moment of Awesome is supposed to be a singular moment for a character and the Rule of Cool can make up for weak points in a story, but rarely does it work as the story.
+Just because a trope is realistic doesn't mean it's good. There is a reason why we have an entire category devoted to Acceptable Breaks from Reality. For example, The Hero gets shot in the shoulder and dies. The Determinator doesn't come into play, no My Name Is Inigo Montoya, nothing. Realistic, maybe, but that is not what we want a hero to do. That's right, one of the most fundamental character archetypes is usually unrealistic. The important thing when writing a story is that it's believable, not that it's real. Reality Is Unrealistic, after all; often people are so used to tropes that it's reality they find jarring.
+A good show doesn't need "good" tropes. People often search for an ideal recipe for a hit show, as if entertainment was some sort of alchemical process, and are surprised when their stitched-together creation lurches three steps before disappearing into critical oblivion. A well written show won't be any worse if it doesn't have a Magnificent Bastard. A good show doesn't get worse if the main five characters don't form a Five-Man Band. Heck, a good show doesn't even need basic tropes like The Hero or Big Bad. <p>
+
+
+
+
+
+
 </body>
 </html>
